Remove dynamic energy tank of cooler